# xnmealib

./: .gitignore  CMakeLists.txt  README.md  build.vc.cmd
doc/: makefile  xnmea.doxygen
include/xnmea/: config.h  context.h  generate.h  generator.h  gmath.h  info.h  parse.h  parser.h  sentence.h  time.h  tok.h  units.h  xnmea.h
samples/: CMakeLists.txt
samples/generate/: CMakeLists.txt  main.c
samples/generator/: CMakeLists.txt  main.c
samples/math/: CMakeLists.txt  main.c
samples/parse/: CMakeLists.txt  main.c
samples/parse_file/: CMakeLists.txt  main.c
src/: context.c  generate.c  generator.c  gmath.c  info.c  parse.c  parser.c  sentence.c  time.c  tok.c
